logs/p01.elasticstub.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/p01'...
Listing './lib/python3.5/site-packages/p01/elasticstub'...
Listing './lib/python3.5/site-packages/p01/elasticstub/config'...
Listing './lib/python3.5/site-packages/p01/elasticstub/sandbox'...
Listing './lib/python3.5/site-packages/p01/elasticstub/sandbox/config'...
Compiling './lib/python3.5/site-packages/p01/elasticstub/testing.py'...
***   File "./lib/python3.5/site-packages/p01/elasticstub/testing.py", line 117
    except (IOError, os.error), why:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p01/elasticstub/tests'...
Listing './lib/python3.5/site-packages/p01/elasticstub/tests/config_empty'...
Listing './lib/python3.5/site-packages/p01/elasticstub/tests/config_json'...
Listing './lib/python3.5/site-packages/p01/elasticstub/tests/config_yaml'...
Listing './lib/python3.5/site-packages/p01.elasticstub-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
